-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8, 9, 10
-
Component/s: javafx
-
generic
-
os_x
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8199504 | 8u192 | Dipak Kumar | P2 | Closed | Fixed | b01 |
FULL PRODUCT VERSION :
java version "1.8.0_162"
Java(TM) SE Runtime Environment (build 1.8.0_162-b12)
Java HotSpot(TM) 64-Bit Server VM (build 25.162-b12, mixed mode)
ADDITIONAL OS VERSION INFORMATION :
Mac OSX Sierra Version 10.12.6
A DESCRIPTION OF THE PROBLEM :
Some thai characters are not displayed correctly when displayed in label control with word wrap enabled.
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
Display the following text in a Label or TextArea, with word wrap enabled:
ซอฟต์แวร์นี้และเอกสารประกอบที่เกี่ยวข้องมีให้ตามข้อตกลงของใบอนุญาตที่ประกอบด้วยข้อจำกัดในการใช้และการเปิดเผย และได้รับความคุ้มครองตามกฎหมายทรัพย์สินทางปัญญา ยกเว้นกรณีที่อนุญาตไว้อย่างชัดเจนในข้อตกลงของใบอนุญาตของคุณ หรือที่กฎหมายกำหนด ห้ามมิให้ใช้ คัดลอก ทำซ้ำ แปล ประชาสัมพันธ์ ดัดแปลง ให้การอนุญาต ส่ง แจกจ่าย แสดง ดำเนินการ เผยแพร่ หรือจัดแสดงบางส่วน ไม่ว่าในรูปแบบและวิธีการใดๆ ห้ามมิให้ย้อนกระบวนการผลิต ย้อนการประกอบ หรือย้อนกระบวนการคอมไพล์ซอฟต์แวร์นี้ ยกเว้นกรณีที่กฎหมายกำหนดให้ทำได้เพื่อให้สามารถทำงานร่วมกัน
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
The characters should display correctly
ACTUAL -
Some of the characters are corrupted - a set of vertical lines are shown in place instead of the expected characters
ERROR MESSAGES/STACK TRACES THAT OCCUR :
No errors or crashes
REPRODUCIBILITY :
This bug can be reproduced always.
---------- BEGIN SOURCE ----------
package test;
import javafx.application.Application;
import javafx.scene.Scene;
import javafx.scene.control.Label;
import javafx.scene.layout.VBox;
import javafx.stage.Stage;
public class Main extends Application
{
@Override
public void start(Stage stage) throws Exception
{
VBox pane = new VBox();
String text = "ซอฟต์แวร์นี้และเอกสารประกอบที่เกี่ยวข้องมีให้ตามข้อตกลงของใบอนุญาตที่ประกอบด้วยข้อจำกัดในการใช้และการเปิดเผย และได้รับความคุ้มครองตามกฎหมายทรัพย์สินทางปัญญา ยกเว้นกรณีที่อนุญาตไว้อย่างชัดเจนในข้อตกลงของใบอนุญาตของคุณ หรือที่กฎหมายกำหนด ห้ามมิให้ใช้ คัดลอก ทำซ้ำ แปล ประชาสัมพันธ์ ดัดแปลง ให้การอนุญาต ส่ง แจกจ่าย แสดง ดำเนินการ เผยแพร่ หรือจัดแสดงบางส่วน ไม่ว่าในรูปแบบและวิธีการใดๆ ห้ามมิให้ย้อนกระบวนการผลิต ย้อนการประกอบ หรือย้อนกระบวนการคอมไพล์ซอฟต์แวร์นี้ ยกเว้นกรณีที่กฎหมายกำหนดให้ทำได้เพื่อให้สามารถทำงานร่วมกัน";
Label label = new Label(text);
label.setWrapText(true);
pane.getChildren().add(label);
Scene scene = new Scene(pane);
stage.setWidth(500);
stage.setHeight(500);
stage.setScene(scene);
stage.show();
}
public static void main(String[] arguments)
{
launch(arguments);
}
}
---------- END SOURCE ----------
CUSTOMER SUBMITTED WORKAROUND :
No workarounds found yet
java version "1.8.0_162"
Java(TM) SE Runtime Environment (build 1.8.0_162-b12)
Java HotSpot(TM) 64-Bit Server VM (build 25.162-b12, mixed mode)
ADDITIONAL OS VERSION INFORMATION :
Mac OSX Sierra Version 10.12.6
A DESCRIPTION OF THE PROBLEM :
Some thai characters are not displayed correctly when displayed in label control with word wrap enabled.
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
Display the following text in a Label or TextArea, with word wrap enabled:
ซอฟต์แวร์นี้และเอกสารประกอบที่เกี่ยวข้องมีให้ตามข้อตกลงของใบอนุญาตที่ประกอบด้วยข้อจำกัดในการใช้และการเปิดเผย และได้รับความคุ้มครองตามกฎหมายทรัพย์สินทางปัญญา ยกเว้นกรณีที่อนุญาตไว้อย่างชัดเจนในข้อตกลงของใบอนุญาตของคุณ หรือที่กฎหมายกำหนด ห้ามมิให้ใช้ คัดลอก ทำซ้ำ แปล ประชาสัมพันธ์ ดัดแปลง ให้การอนุญาต ส่ง แจกจ่าย แสดง ดำเนินการ เผยแพร่ หรือจัดแสดงบางส่วน ไม่ว่าในรูปแบบและวิธีการใดๆ ห้ามมิให้ย้อนกระบวนการผลิต ย้อนการประกอบ หรือย้อนกระบวนการคอมไพล์ซอฟต์แวร์นี้ ยกเว้นกรณีที่กฎหมายกำหนดให้ทำได้เพื่อให้สามารถทำงานร่วมกัน
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
The characters should display correctly
ACTUAL -
Some of the characters are corrupted - a set of vertical lines are shown in place instead of the expected characters
ERROR MESSAGES/STACK TRACES THAT OCCUR :
No errors or crashes
REPRODUCIBILITY :
This bug can be reproduced always.
---------- BEGIN SOURCE ----------
package test;
import javafx.application.Application;
import javafx.scene.Scene;
import javafx.scene.control.Label;
import javafx.scene.layout.VBox;
import javafx.stage.Stage;
public class Main extends Application
{
@Override
public void start(Stage stage) throws Exception
{
VBox pane = new VBox();
String text = "ซอฟต์แวร์นี้และเอกสารประกอบที่เกี่ยวข้องมีให้ตามข้อตกลงของใบอนุญาตที่ประกอบด้วยข้อจำกัดในการใช้และการเปิดเผย และได้รับความคุ้มครองตามกฎหมายทรัพย์สินทางปัญญา ยกเว้นกรณีที่อนุญาตไว้อย่างชัดเจนในข้อตกลงของใบอนุญาตของคุณ หรือที่กฎหมายกำหนด ห้ามมิให้ใช้ คัดลอก ทำซ้ำ แปล ประชาสัมพันธ์ ดัดแปลง ให้การอนุญาต ส่ง แจกจ่าย แสดง ดำเนินการ เผยแพร่ หรือจัดแสดงบางส่วน ไม่ว่าในรูปแบบและวิธีการใดๆ ห้ามมิให้ย้อนกระบวนการผลิต ย้อนการประกอบ หรือย้อนกระบวนการคอมไพล์ซอฟต์แวร์นี้ ยกเว้นกรณีที่กฎหมายกำหนดให้ทำได้เพื่อให้สามารถทำงานร่วมกัน";
Label label = new Label(text);
label.setWrapText(true);
pane.getChildren().add(label);
Scene scene = new Scene(pane);
stage.setWidth(500);
stage.setHeight(500);
stage.setScene(scene);
stage.show();
}
public static void main(String[] arguments)
{
launch(arguments);
}
}
---------- END SOURCE ----------
CUSTOMER SUBMITTED WORKAROUND :
No workarounds found yet
- backported by
-
JDK-8199504 [macOS] Corrupt Thai characters displayed in word wrapped label
-
- Closed
-
- relates to
-
JDK-8209191 [macOS] Distorted complex text rendering
-
- Resolved
-