8198354: [macOS] Corrupt Thai characters displayed in word wrapped label

Reviewed-by: kcr, mbilla